visibility fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -775,6 +775,7 @@ body {
   font-size: 18px;
   line-height: 1.56;
   text-align: left;
+  visibility: hidden;
 
   opacity: 0;
 
@@ -787,6 +788,7 @@ body {
 .item.portfolio-card:focus .portfolio-overlay-card {
   transform: translate(-50%, -50%) translateY(0);
   opacity: 1;
+  visibility: visible;
 }
 
 .item.portfolio-card:hover .card-portfolio-text,
